# imagetools

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
cocotools/src/coco/: object_detection.rs
cocotools/src/mask/: conversions.rs
cocotools/src/visualize/: draw.rs
scripts/: build.sh  install-ubuntu-vcpkg.sh  install-vcpkg.sh  install-windows-vcpkg.sh  install-windows.sh  install.sh
src/: common.rs  images.rs  labels.rs  main.rs  yolo.rs
src/common/: augment.rs  convert.rs  dataset.rs  metric.rs  operation.rs  remap.rs
src/common/dataset/: mask.rs
src/common/operation/: resize.rs
src/remote_sensing/: resize.rs
src/yolo/: convert.rs  dataset.rs
