[package]
name = "imagetools"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
cocotools = { path = "./third_party/cocotools" }
image = "*"
imageproc = "*"
ndarray = "*"
rand = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
opencv = { version = "0.93.1", default-features = false, features = [
    "clang-runtime",
    "imgproc",
    "imgcodecs",
] }
# gdal = "0.17"
itertools = "0.12.1"
clap = { version = "4.5.9", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-unwrap = "1.0.1"
regex = "*"
rayon = "*"
rayon-progress = "1.0.0"
parking_lot = "0.12.3"
tracing-indicatif = "0.3.6"
indicatif = "0.17.8"

[profile.release]
debug = true
