[package]
name = "imagetools"
version = "0.1.0"
edition = "2021"

[dependencies]
cocotools = { path = "./third_party/cocotools" }
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
opencv = { version = "0.97", default-features = false, features = [
    "clang-runtime",
    "imgproc",
    "imgcodecs"
] }
# gdal = "0.17"
itertools = "0.13"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1"
tracing-unwrap = "1.0"
regex = "1.11"
rayon = "1.10"
rayon-progress = "1.0"
parking_lot = "0.12"
tracing-indicatif = "0.3"
indicatif = "0.17"
tracing-tracy = "0.11"
# Num related
num = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
anyhow = "1.0"
walkdir = "2"

[profile.release]
debug = true
